further quality assurance

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -25,7 +25,7 @@
 			<div class="grid_16">
 				<ul class="nav main">
 					<li>
-						<a href="{% url psc.views.vr_checklist_list %}">Voter's Registration</a>
+						<a href="{% url psc.views.vr_checklist_list %}">Voters' Registration</a>
 						<ul>
 							<li>
 								<a href="{% url psc.views.vr_checklist_list %}">Checklist</a>
