--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -20,7 +20,7 @@
 {% block content %}
 <div class="grid_16">
 	<div class="box" style="padding-bottom:1em"> 
-		<h2>Voter's Registration Checklists</h2>
+		<h2>Voters' Registration Checklist</h2>
 		<div class="block">
 			<div id="filter">
 				<form action="" method="get" id="filter_form" accept-charset="utf-8">
