--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -1,4 +1,5 @@
 {% extends "psc/layout.html" %}
+{% load comments %}
 {% block content %}
 <form action="{% url psc.views.dco_checklist checklist.id %}" method="post">
     <div class="grid_16">
@@ -130,7 +131,7 @@
                             <p>{{ form.J.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.J.name }}' type='text' class='text numeric' value="{{ form.initial.J|default:"" }}"></div>
+                            <div class='options'><input name='{{ form.J.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.J|default:"" }}"></div>
                         </div>
                     </div>
                     <div class='parent'>
@@ -141,7 +142,7 @@
                             <p>{{ form.K.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.K.name }}' type='text' class='text numeric' value="{{ form.initial.K|default:"" }}"></div>
+                            <div class='options'><input name='{{ form.K.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.K|default:"" }}"></div>
                         </div>
                     </div>
                       <div class='parent'>
@@ -223,7 +224,7 @@
                             <p>{{ form.S.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.S.name }}' type='text' class='text numeric' value="{{ form.initial.S|default:"" }}"></div>
+                            <div class='options'><input name='{{ form.S.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.S|default:"" }}"></div>
                         </div>
                     </div>
                      <div class='parent'>
@@ -234,7 +235,7 @@
                             <p>{{ form.T.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.T.name }}' type='text' class='text numeric' value="{{ form.initial.T|default:"" }}"></div>
+                            <div class='options'><input name='{{ form.T.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.T|default:"" }}"></div>
                         </div>
                     </div>
                      <div class='parent'>
@@ -297,7 +298,6 @@
 								{% csrf_token %}
                 <input type="submit" name="submit" value="Save">
             </div>
-
         </div>
     </div>
 </form>
