--- a/psc/templates/psc/vr_incident_add_form.html
+++ b/psc/templates/psc/vr_incident_add_form.html
@@ -172,7 +172,7 @@
 					<p>M</p>
 				</div>
 				<div class='second'>
-					<p>Registering large numbers of people who receive temporary voter's cards with missing or inaccurate information</p>
+					<p>Registering large numbers of people who received temporary voter's cards with missing or inaccurate information</p>
 				</div>
 				<div class='third'>
 					<div class='options'>
