--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -20,7 +20,7 @@
 {% block content %}
 <div class="grid_16">
 	<div class="box"> 
-		<h2>Voter's Registration Incidents</h2>
+		<h2>Voters' Registration Incidents</h2>
 		<div class="block">
                     <div id="filter">
 				<form action="" method="get" id="filter_form" accept-charset="utf-8">
