--- a/psc/templates/psc/vr_incident_update_form.html
+++ b/psc/templates/psc/vr_incident_update_form.html
@@ -101,7 +101,7 @@
 					<p>G</p>
 				</div>
 				<div class='second'>
-					<p>Registering of large numbers of underage persons</p>
+					<p>Registering large numbers of underage persons</p>
 				</div>
 				<div class='third'>
 					<div class='options'>
@@ -114,7 +114,7 @@
 					<p>H</p>
 				</div>
 				<div class='second'>
-					<p>Registering of large numbers of people who have already registered</p>
+					<p>Registering large numbers of people who have already registered</p>
 				</div>
 				<div class='third'>
 					<div class='options'>
@@ -127,7 +127,7 @@
 					<p>J</p>
 				</div>
 				<div class='second'>
-					<p>Registering of large numbers of people not from the community </p>
+					<p>Registering large numbers of people not from the community </p>
 				</div>
 				<div class='third'>
 					<div class='options'>
@@ -153,7 +153,7 @@
 					<p>M</p>
 				</div>
 				<div class='second'>
-					<p>Registering large numbers of people who receive temporary voter's cards with missing or inaccurate information</p>
+					<p>Registering large numbers of people who received temporary voter's cards with missing or inaccurate information</p>
 				</div>
 				<div class='third'>
 					<div class='options'>
