--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -25,8 +25,8 @@
                             <p>{{ form.A.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.A.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.A == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.A.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.A == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.A.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.A == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.A.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.A == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.A.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.A %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -38,8 +38,8 @@
                             <p>{{ form.B.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.B.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.B == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.B.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.B == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.B.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.B == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.B.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.B == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.B.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.B %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -62,8 +62,8 @@
                             <p>{{ form.D.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.D.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.D == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.D.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.D == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.D.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.D == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.D.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.D == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.D.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.D %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -75,8 +75,8 @@
                             <p>{{ form.E.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.E.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.E == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.E.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.E == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.E.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.E == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.E.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.E == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.E.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.E %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -88,15 +88,15 @@
                             <p>{{ form.F1.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.F1.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F1 %} checked='checked'{% endif %}>Statement of Additions <br />(EC. 1C)(1)</div>
-                            <div class='options'><input name='{{ form.F2.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F2 %} checked='checked'{% endif %}>Statement of Corrections<br />(E.1D)(2)</div>
-                            <div class='options'><input name='{{ form.F3.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F3 %} checked='checked'{% endif %}>Statement of Deletions <br />(EC.1E)(3)</div>
-                            <div class='options'><input name='{{ form.F4.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F4 %} checked='checked'{% endif %}>Claims for Correction or Insertion <br />(EC.2)(4)</div>
-                            <div class='options'><input name='{{ form.F5.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F5 %} checked='checked'{% endif %}>Objections to Inclusion <br />(EC.3)(5)</div>
-                            <div class='options'><input name='{{ form.F6.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F6 %} checked='checked'{% endif %}>Notification of Death <br />(EC.3A)(6)</div>
-                            <div class='options'><input name='{{ form.F7.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F7 %} checked='checked'{% endif %}>Summary of Returns <br />(EC.5A)(7)</div>
-                            <div class='options'><input name='{{ form.F8.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F8 %} checked='checked'{% endif %}>Summary of Actions<br />(EC.6A)(8)</div>
-                            <div class='options'><input name='{{ form.F9.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F9 %} checked='checked'{% endif %}>None Missing(9)</div>
+                            <div class='options'><input name='{{ form.F1.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F1 %} checked='checked'{% endif %}>Statement of Additions <br />(EC. 1C)(1)<br />(1)</div>
+                            <div class='options'><input name='{{ form.F2.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F2 %} checked='checked'{% endif %}>Statement of Corrections<br />(E.1D)(2)<br />(2)</div>
+                            <div class='options'><input name='{{ form.F3.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F3 %} checked='checked'{% endif %}>Statement of Deletions <br />(EC.1E)(3)<br />(3)</div>
+                            <div class='options'><input name='{{ form.F4.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F4 %} checked='checked'{% endif %}>Claims for Correction or Insertion <br />(EC.2)<br />(4)</div>
+                            <div class='options'><input name='{{ form.F5.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F5 %} checked='checked'{% endif %}>Objections to Inclusion <br />(EC.3)<br />(5)</div>
+                            <div class='options'><input name='{{ form.F6.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F6 %} checked='checked'{% endif %}>Notification of Death <br />(EC.3A)<br />(6)</div>
+                            <div class='options'><input name='{{ form.F7.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F7 %} checked='checked'{% endif %}>Summary of Returns <br />(EC.5A)<br />(7)</div>
+                            <div class='options'><input name='{{ form.F8.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F8 %} checked='checked'{% endif %}>Summary of Actions<br />(EC.6A)<br />(8)</div>
+                            <div class='options'><input name='{{ form.F9.name }}' type='checkbox' class='checkbox numeric' value="True"{% if form.initial.F9 %} checked='checked'{% endif %}>None Missing<br />(9)</div>
                         </div>
                     </div>
                     <div class='parent'>
@@ -118,8 +118,8 @@
                             <p>{{ form.H.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.H == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.H == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.H == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.H == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.H %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -153,8 +153,8 @@
                             <p>{{ form.M.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.M == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.M == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.M == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.M == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.M %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -166,8 +166,8 @@
                             <p>{{ form.N.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.N == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.N == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.N == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.N == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.N %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -179,8 +179,8 @@
                             <p>{{ form.P.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.P == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.P == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.P == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.P == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.P %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -192,8 +192,8 @@
                             <p>{{ form.Q.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.Q == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.Q == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.Q == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.Q == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.Q %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
@@ -205,8 +205,8 @@
                             <p>{{ form.R.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.R == 1 %} checked='checked'{% endif %}>Yes</div>
-                            <div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.R == 2 %} checked='checked'{% endif %}>No</div>
+                            <div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value="1"{% if form.initial.R == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
+                            <div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value="2"{% if form.initial.R == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
                             <div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value="0"{% if not form.initial.R %} checked='checked'{% endif %}>Unchecked</div>
                         </div>
                     </div>
