Modification of number options for responses Numeric values for both radio buttons and checklists were modified.

--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -127,7 +127,7 @@
 					<div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.H == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.H == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.H == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.H %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.H.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.H %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -143,7 +143,7 @@
 					<div class='options'><input name='{{ form.J.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.J == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.J.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.J == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.J.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.J == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.J.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.J %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.J.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.J %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -159,7 +159,7 @@
 					<div class='options'><input name='{{ form.K.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.K == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.K.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.K == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.K.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.K == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.K.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.K %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.K.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.K %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -175,7 +175,7 @@
 					<div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.M == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.M == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.M == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.M %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.M.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.M %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -191,7 +191,7 @@
 					<div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.N == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.N == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.N == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.N %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.N.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.N %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -207,7 +207,7 @@
 					<div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.P == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.P == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.P == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.P %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.P.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.P %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -223,7 +223,7 @@
 					<div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.Q == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.Q == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.Q == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.Q %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.Q.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.Q %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -239,7 +239,7 @@
 					<div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.R == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.R == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.R == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.R %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.R.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.R %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -255,7 +255,7 @@
 					<div class='options'><input name='{{ form.S.name }}' type='radio' class='radio numeric' value='3'{% if form.initial.S == 3 %} checked='checked'{% endif %}>Half<br />(3)</div>
 					<div class='options'><input name='{{ form.S.name }}' type='radio' class='radio numeric' value='4'{% if form.initial.S == 4 %} checked='checked'{% endif %}>Most<br />(4)</div>
 					<div class='options'><input name='{{ form.S.name }}' type='radio' class='radio numeric' value='5'{% if form.initial.S == 5 %} checked='checked'{% endif %}>All<br />(5)</div>
-					<div class='options'><input name='{{ form.S.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.S %} checked='checked'{% endif %}>Unspecified<br />(6)</div>
+					<div class='options'><input name='{{ form.S.name }}' type='radio' class='radio numeric' value=''{% if not form.initial.S %} checked='checked'{% endif %}>Unspecified</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -266,9 +266,9 @@
 					<p>{{ form.T.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.T.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.T == 1 %} checked='checked'{% endif %}>Yes <br />(1)</div>
+					<div class='options'><input name='{{ form.T.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.T == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
 					<div class='options'><input name='{{ form.T.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.T == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
-					<div class='options'><input name='{{ form.T.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.T %} checked='checked'{% endif %}>Unchecked (3)</div>
+					<div class='options'><input name='{{ form.T.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.T %} checked='checked'{% endif %}>Unchecked</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -279,9 +279,9 @@
 					<p>{{ form.U.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.U.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.U == 1 %} checked='checked'{% endif %}>Yes <br />(1)</div>
+					<div class='options'><input name='{{ form.U.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.U == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
 					<div class='options'><input name='{{ form.U.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.U == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
-					<div class='options'><input name='{{ form.U.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.U %} checked='checked'{% endif %}>Unchecked <br />(3)</div>
+					<div class='options'><input name='{{ form.U.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.U %} checked='checked'{% endif %}>Unchecked</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -292,9 +292,9 @@
 					<p>{{ form.V.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.V.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.V == 1 %} checked='checked'{% endif %}>Yes <br />(1)</div>
+					<div class='options'><input name='{{ form.V.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.V == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
 					<div class='options'><input name='{{ form.V.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.V == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
-					<div class='options'><input name='{{ form.V.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.V %} checked='checked'{% endif %}>Unchecked <br />(3)</div>
+					<div class='options'><input name='{{ form.V.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.V %} checked='checked'{% endif %}>Unchecked</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -305,9 +305,9 @@
 					<p>{{ form.W.help_text }}</p>
 				</div>
 				<div class='third'>
-					<div class='options'><input name='{{ form.W.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.W == 1 %} checked='checked'{% endif %}>Yes<br />(1) </div>
+					<div class='options'><input name='{{ form.W.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.W == 1 %} checked='checked'{% endif %}>Yes<br />(1)</div>
 					<div class='options'><input name='{{ form.W.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.W == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
-					<div class='options'><input name='{{ form.W.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.W %} checked='checked'{% endif %}>Unchecked <br />(3)</div>
+					<div class='options'><input name='{{ form.W.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.W %} checked='checked'{% endif %}>Unchecked</div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -320,7 +320,7 @@
 				<div class='third'>
 					<div class='options'><input name='{{ form.X.name }}' type='radio' class='radio numeric' value='1'{% if form.initial.X == 1 %} checked='checked'{% endif %}>Yes <br />(1)</div>
 					<div class='options'><input name='{{ form.X.name }}' type='radio' class='radio numeric' value='2'{% if form.initial.X == 2 %} checked='checked'{% endif %}>No<br />(2)</div>
-					<div class='options'><input name='{{ form.X.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.X %} checked='checked'{% endif %}>Unchecked<br />(3) </div>
+					<div class='options'><input name='{{ form.X.name }}' type='radio' class='radio numeric' value='0'{% if not form.initial.X %} checked='checked'{% endif %}>Unchecked</div>
 				</div>
 			</div>
 			<div class='parent'>
