--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -51,8 +51,7 @@
 						<th>Observer ID</th>
 						<th>Date</th>
 						<th>LGA</th>
-						<th>SD</th>
-						<th>State</th>
+						<th>State/SD</th>						
 						<th>Observer</th>
 						<th>Supervisor</th>
 						<th>Status</th>
@@ -70,8 +69,7 @@
 					<td>{{ cl.observer.observer_id }}</td>
 					<td>{{ cl.date|date:"d/m/Y" }}</td>
 					<td>{{ cl.observer.location.name }}</td>
-					<td>{{ cl.observer.location.parent.name }}</td>
-					<td>{{ cl.observer.location.parent.parent.name }}</td>
+					<td>{{ cl.observer.location.parent.name }}</td>					
 					<td>{{ cl.observer.name }}</td>
 					<td>{{ cl.observer.supervisor.name }}</td>
 					<td>
