--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -52,8 +52,7 @@
 					<th>Observer ID</th>
 					<th>Date</th>
 					<th>LGA</th>
-					<th>SD</th>
-					<th>State</th>
+					<th>State/SD</th>
 					<th>Observer</th>
 					<th>Supervisor</th>
 					<th>1st</th>
@@ -67,8 +66,7 @@
 					<td>{{ cl.observer.observer_id }}</td>
 					<td>{{ cl.date|date:"d/m/Y" }}</td>
 					<td>{{ cl.observer.location.name|default:"Uknown" }}</td>
-					<td>{{ cl.observer.location.parent.name|default:"Uknown" }}</td>
-					<td>{{ cl.observer.location.parent.parent.name|default:"Uknown" }}</td>
+					<td>{{ cl.observer.location.parent.name|default:"Uknown" }}</td>					
 					<td>{{ cl.observer.name }}</td>
 					<td>{{ cl.observer.supervisor.name }}</td>
 					<td>
