--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -4,7 +4,7 @@
 <form method="POST" action="{% url psc.views.vr_checklist checklist.id %}">
 <div class="grid_16">
 	<div class="box">	
-		<h2>Checklist Details</h2>
+            <h2><span class="indicator">1st SMS</span>Checklist Details</h2>
 		<div class="block">
 		<!-- checklist details -->
 		<table>
@@ -13,7 +13,7 @@
 		</table>
 		</div>
 		<div class="clear"></div>
-		<h2>Opening Checklist Questions</h2>
+                <h2><span class="indicator">2nd SMS</span>Opening Checklist Questions</h2>
 		<!-- opening checklist question -->
 		<div class='block'>
 		<div class='grandparent'>
@@ -112,7 +112,7 @@
 		</div>
     <div class="clear"></div>
 		<!-- end of dat checklist -->
-		<h2>End of day checklist question</h2>
+		<h2><span class="indicator">3rd SMS</span>End of day checklist question</h2>
 		<div class='block'>
 		<div class='grandparent'>
 			<div class='parent'>
