=made locations in filte filter forms in alphabetic order

--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -48,7 +48,7 @@
 				<thead>
 					<tr>
 						<th>SN</th>
-						<th>Observer ID</th>
+						<th>PSC ID</th>
 						<th>Date</th>
 						<th>LGA</th>
 						<th>State/SD</th>						
