--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -49,7 +49,7 @@
 			<table>
 				<thead>
 					<tr>
-					<th>Observer ID</th>
+					<th>PSC ID</th>
 					<th>Date</th>
 					<th>LGA</th>
 					<th>District</th>
