--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -67,7 +67,7 @@
 				{% endif %}
 					<td>{{ cl.sms_serial|default:"N/A" }}</td>
 					<td>{{ cl.observer.observer_id }}</td>
-					<td>{{ cl.date|date:"d/m/Y" }}</td>
+					<td>{{ cl.date|date:"D d-N" }}</td>
 					<td>{{ cl.observer.location.name }}</td>
 					<td>{{ cl.observer.location.parent.name }}</td>					
 					<td>{{ cl.observer.name }}</td>
