--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -78,7 +78,7 @@
 			<div class="grid_16" id="site_info">
 				<div class="box">
 					{% block footer %}
-					<p>A project by <a href="http://www.fomwan.org/">FOMWAN</a>, JDPC, <a href="http://www.tmgnigeria.org/">TMG</a> and <a href="http://www.nba.org.ng/">NBA</a></p>
+                                        <p>A project by <a href="http://www.fomwan.org/">FOMWAN</a>, <a href="#">JDPC</a>, <a href="http://www.tmgnigeria.org/">TMG</a> and <a href="http://www.nba.org.ng/">NBA</a></p>
 					{% endblock %}
 				</div>
 			</div>
