--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -87,6 +87,7 @@ h2#page-heading {
 .box h2 span.indicator {
     background-color: #256188;
     padding: 5px;
+    height: 20px;
     font-size: 11px;
     font-weight: bold;
     border: 1px #87CEEB solid;
