--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -35,7 +35,12 @@
 						<tbody>
 							<tr>
 								{% for field in filter_form %}
-								<td>{{ field }}</td>
+                                                                {% if field.name == 'day' %}
+                                                                    <td>{{ field }}</td>
+                                                                {% endif %}
+                                                                {% if field.name != 'date' %}
+                                                                    <td>{{ field }}</td>
+                                                                {% endif %}
 								{% endfor %}
 								<td><input type="button" value="reset" id="reset">
 								<input type="submit" value="filter &rarr;"></td>
@@ -67,7 +72,7 @@
 				{% endif %}
 					<td>{{ cl.sms_serial|default:"N/A" }}</td>
 					<td>{{ cl.observer.observer_id }}</td>
-					<td>{{ cl.date|date:"D d-N" }}</td>
+					<td>{{ cl.date|date:"D d-M" }}</td>
 					<td>{{ cl.observer.location.name }}</td>
 					<td>{{ cl.observer.location.parent.name }}</td>					
 					<td>{{ cl.observer.name }}</td>
