--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -64,7 +64,7 @@
 				{% for cl in checklists.object_list %}
 				<tr{% cycle ' class="odd"' '' %}>
 					<td>{{ cl.observer.observer_id }}</td>
-					<td>{{ cl.date|date:"D d-N" }}</td>
+					<td>{{ cl.date|date:"D d-M" }}</td>
 					<td>{{ cl.observer.location.name|default:"Uknown" }}</td>
 					<td>{{ cl.observer.location.parent.name|default:"Uknown" }}</td>					
 					<td>{{ cl.observer.name }}</td>
