updated the header and footer

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -18,7 +18,7 @@
 			<div class="grid_16">
 				<img class="floatLeft" src="/assets/img/logo.jpg" width="81" height="72" alt = "wow" style = "margin:10px"/>
 				<h1 id="branding">
-					<a href="">Project SwiftCount 2011</a>
+					<a href="">Project 2011 SwiftCount (FOMWAN, JDPC, NBA &amp; TMG)</a>
 				</h1>
 			</div>
 			<div class="clear"></div>
@@ -78,7 +78,7 @@
 			<div class="grid_16" id="site_info">
 				<div class="box">
 					{% block footer %}
-                                        <p>A project by <a href="http://www.fomwan.org/">FOMWAN</a>, <a href="#">JDPC</a>, <a href="http://www.tmgnigeria.org/">TMG</a> and <a href="http://www.nba.org.ng/">NBA</a></p>
+                                        <p>A project by <a href="http://www.fomwan.org/">FOMWAN</a>, <a href="#">JDPC</a>, <a href="http://www.nba.org.ng/">NBA</a> and <a href="http://www.tmgnigeria.org/">TMG</a></p>
 					{% endblock %}
 				</div>
 			</div>
